[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/bg-2.png" type="Texture" id=1]
[ext_resource path="res://sprites/bg-5.png" type="Texture" id=2]
[ext_resource path="res://sprites/spot.png" type="Texture" id=3]
[ext_resource path="res://sprites/light.png" type="Texture" id=4]
[ext_resource path="res://sprites/tileset.png" type="Texture" id=5]
[ext_resource path="res://materials/sprite_lit_default.tres" type="Material" id=6]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/hdr_color_picker.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ui.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 112, 75, 32, 69 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 65, 167, 47, 41 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="Environment" id=4]
background_mode = 4
ambient_light_color = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
auto_exposure_scale = 0.05
auto_exposure_min_luma = 0.03
glow_enabled = true
glow_levels/6 = true
glow_strength = 0.8
glow_bloom = 0.1
glow_blend_mode = 0
glow_bicubic_upscale = true

[node name="scene" type="Node2D"]

[node name="environment" type="Node2D" parent="."]

[node name="background" type="Node2D" parent="environment"]
material = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="environment/background"]
light_mask = 2
use_parent_material = true
texture = ExtResource( 1 )
centered = false

[node name="Sprite3" type="Sprite" parent="environment/background"]
light_mask = 2
use_parent_material = true
position = Vector2( 128, 0 )
texture = ExtResource( 1 )
centered = false

[node name="bg-5" type="Sprite" parent="environment/background"]
light_mask = 2
use_parent_material = true
position = Vector2( 256, 0 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="environment/background"]
light_mask = 2
use_parent_material = true
position = Vector2( 320, 0 )
texture = ExtResource( 1 )
centered = false

[node name="ground" type="Node2D" parent="environment"]
material = ExtResource( 6 )
z_index = 1

[node name="Sprite4" type="Sprite" parent="environment/ground"]
use_parent_material = true
position = Vector2( 75, 189 )
texture = SubResource( 1 )
centered = false

[node name="Sprite6" type="Sprite" parent="environment/ground"]
use_parent_material = true
position = Vector2( 106, 188 )
texture = SubResource( 2 )
centered = false

[node name="Sprite7" type="Sprite" parent="environment/ground"]
use_parent_material = true
position = Vector2( 153, 188 )
texture = SubResource( 2 )
centered = false

[node name="Sprite8" type="Sprite" parent="environment/ground"]
use_parent_material = true
position = Vector2( 200, 188 )
texture = SubResource( 2 )
centered = false

[node name="Sprite9" type="Sprite" parent="environment/ground"]
use_parent_material = true
position = Vector2( 247, 188 )
texture = SubResource( 2 )
centered = false

[node name="Sprite10" type="Sprite" parent="environment/ground"]
use_parent_material = true
position = Vector2( 294, 188 )
texture = SubResource( 2 )
centered = false

[node name="Sprite11" type="Sprite" parent="environment/ground"]
use_parent_material = true
position = Vector2( 341, 188 )
texture = SubResource( 2 )
centered = false

[node name="Sprite5" type="Sprite" parent="environment/ground"]
use_parent_material = true
position = Vector2( 388, 189 )
texture = SubResource( 1 )
centered = false

[node name="player" parent="." instance=ExtResource( 7 )]
light_mask = 0
position = Vector2( 251, 189 )

[node name="Light2D" type="Light2D" parent="player"]
position = Vector2( 0, -32 )
texture = ExtResource( 3 )
texture_scale = 2.3
color = Color( 0.427451, 0.921569, 1, 1 )

[node name="global_light" type="Light2D" parent="."]
position = Vector2( 183, 195 )
texture = ExtResource( 4 )
texture_scale = 50.0
energy = 0.5
mode = 2
range_item_cull_mask = 3

[node name="Sprite" type="Sprite" parent="global_light"]
visible = false
material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 241, 141 )
current = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="ui" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="hdr_color_picker" parent="ui" instance=ExtResource( 8 )]
margin_right = 0.0
margin_bottom = 18.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="HBoxContainer" type="HBoxContainer" parent="ui"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -18.0
margin_right = 36.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="necklace" type="TextureButton" parent="ui/HBoxContainer"]
margin_right = 36.0
margin_bottom = 18.0
rect_min_size = Vector2( 36, 18 )
size_flags_horizontal = 3
expand = true

[node name="attack" type="TextureButton" parent="ui/HBoxContainer"]
margin_left = 36.0
margin_right = 72.0
margin_bottom = 18.0
rect_min_size = Vector2( 36, 18 )
size_flags_horizontal = 3
expand = true
[connection signal="color_changed" from="ui/hdr_color_picker" to="ui" method="_on_hdr_color_picker_color_changed"]
[connection signal="pressed" from="ui/HBoxContainer/necklace" to="ui" method="_on_necklace_pressed"]
[connection signal="pressed" from="ui/HBoxContainer/attack" to="ui" method="_on_attack_pressed"]
